# WeatherForecast

./: .gitignore  README.md
backend/: .env.local  .gitignore  Dockerfile  Makefile  docker-compose-local.yaml  pyproject.toml
backend/weather_forecast/: entrypoint.sh
backend/weather_forecast/apps/core/: pagination.py  redis.py
backend/weather_forecast/apps/forecast/: api_client.py  dependecies.py  models.py  repositories.py  search_history.py  serializers.py  service.py  urls.py  views.py
backend/weather_forecast/apps/forecast/domain/: models.py  service.py
backend/weather_forecast/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/weather_forecast/forecast/: api_client.py  client.py  client_errors.py  search_history.py  serializers.py  service.py  urls.py  views.py
backend/weather_forecast/forecast/migrations/: 0001_initial.py
frontend/app/: index.html  package-lock.json  package.json
frontend/app/src/: App.jsx  main.jsx
frontend/app/src/components/: autocomplete.jsx  button.jsx  index.js  layout.jsx  list-item.jsx  modal.jsx  text-input.jsx  weather-detail.jsx  weather-item.jsx
frontend/app/src/lib/: autocomplete.js
frontend/app/src/routes/: daily-forecast.jsx  error-page.jsx  hourly-forecast.jsx  index.js  root.jsx
